--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+
+*{
+  margin: 1%;
+  background-color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.heading{
+  margin: 2%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-weight: 700;
+  display: flex;
+  text-align: center;
+  color: rgb(214, 182, 252);
+  font-size: 50px;
+}
+.last{
+  margin: 2%;
+  justify-content: center;
+  font-weight: 400;
+  display: flex;
+  text-align: center;
+  color: rgb(214, 182, 252);
+  font-size: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.container{
+  margin: auto;
+  width: 50%;
+  justify-content: center;
+  border: 4px solid cadetblue;
+  border-radius: 2px;
+  box-shadow: 1px 1px 10px;
+
+}
+.col{
+  margin: .5%;
+  display: flex;
+  color: aliceblue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  color: aliceblue;
+}
+input {
+  color:aliceblue
+}
+.display{
+  color: aliceblue;
 }
